started working on website texts

--- a/_includes/presentation.html
+++ b/_includes/presentation.html
@@ -3,10 +3,11 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="description">
-                    <h4 class="header-text">It's so pretty</h4>
+                    <h4 class="header-text">Modernes Design</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        <br/> consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Wir legen sehr großen Wert auf Userfreundlichkeit und die Benutzeroberfläche unserer App.
+                        <br/> 
+						Darum punkten wir mit einem modernen schlichten Design, welches allen Wünschen unserer Kunden entspricht.
                     </p>
                 </div>
             </div>
