Included: Logos, upper text

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -6,12 +6,10 @@
         </p>
         <div class="logos">
             <ul class="list-unstyled">
-                <li><img src="assets/img/logos/adobe.png" /></li>
-                <li><img src="assets/img/logos/zendesk.png" /></li>
-                <li><img src="assets/img/logos/ebay.png" /></i>
-                    <li><img src="assets/img/logos/evernote.png" /></li>
-                    <li><img src="assets/img/logos/airbnb.png" /></li>
-                    <li><img src="assets/img/logos/zappos.png" /></li>
+                <li><img src="assets/img/logos/pycharm.png" /></li>
+                <li><img src="assets/img/logos/intellijIdea.png" /></li>
+                <li><img src="assets/img/logos/eclipse.png" /></i>
+                    <li><img src="assets/img/logos/Couchbase_Lite_logo.png" /></li>
             </ul>
         </div>
     </div>
