--- a/_includes/parallax1.html
+++ b/_includes/parallax1.html
@@ -6,26 +6,20 @@
         <div class="row">
             <div class="col-md-5 hidden-xs">
                 <div class="parallax-image">
-                    <img class="phone" src="assets/img/template/iphone3.png" style="margin-top: 20px" />
+                    <img class="phone" src="assets/img/template/nexus6.png" style="margin-top: 20px" />
                 </div>
             </div>
             <div class="col-md-6 col-md-offset-1">
                 <div class="description">
                     <h2>Diplomprojekt der Abteilung Informationstechnologie</h2>
                     <br>
-                    <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco.</h5>
+                    <h5>In diesem Projekt wird eine Applikation für das mobile Betriebssystem Android implementiert, 
+			die dem Fahrer eines KFZ während der Fahrt Informationen zu Fahrgastbequemlichkeit
+			und verbrauchseffizienter Fahrweise gibt.</h5>
                 </div>
                 <div class="buttons">
                     <button class="btn btn-fill btn-neutral">
                         <i class="fa fa-android"></i> Play Store
-                    </button>
-                    <button class="btn btn-simple btn-neutral">
-                        <i class="fa fa-apple"></i>
-                    </button>
-                    <button class="btn btn-simple btn-neutral">
-                        <i class="fa fa-windows"></i>
                     </button>
                 </div>
             </div>
