Mdae minor changes to text and images on website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Besonderheiten</a>
+                        <a class="page-scroll" href="#services">Merkmale</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">News</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Über uns</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="intro-text">
                     <div class="intro-lead-in">Technologisches Gewerbemuseum</div>
-                    <div class="intro-heading">Willkommen zu BestShift</div>
+                    <div class="intro-heading">Welcome to BestShift</div>
                     <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
                 </div>
             </div>
