--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Blog Posts</h2>
-                    <h3 class="section-subheading text-muted">Hier können Sie aktuelle News zu unserem Projekt erhalten</h3>
+                    <h2 class="section-heading">News</h2>
+                    <h3 class="section-subheading text-muted">Aktuelle Updates zum Diplomprojekt</h3>
                 </div>
             </div>
             <div class="row">
