--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Besonderheiten</h2>
+                    <h2 class="section-heading">Merkmale</h2>
                     <h3 class="section-subheading text-muted">Was macht unser Projekt so einzigartig?</h3>
                 </div>
             </div>
