--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,23 +14,29 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Modernes Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+					    Wir legen sehr großen Wert auf Userfreundlichkeit und die Benutzeroberfläche unserer App.
+                        <br/> 
+						Darum punkten wir mit einem modernen schlichten Design, welches allen Wünschen unserer Kunden entspricht.
+					</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Easy to integrate</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Einfach zu Bedienen</h4>
+                    <p class="text-muted">
+						Aufgrund des übersichtlichen und intuitiven Designs ist unsere App in Verbindung mit dem Car-PC sehr einfach zu Bedienen.
+					</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Secure</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Datensicherung</h4>
+                    <p class="text-muted">Die Daten werden gespeichert !!Work in progress!!</p>
                 </div>
             </div>
         </div>
