Included a loading page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
 
     <body id="page-top" class="index">
 
+    <div id="loader"></div>
+
     {% include header.html %}
     {% include services.html %}
     {% include portfolio_grid.html %}
