--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -33,10 +33,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-<<<<<<< HEAD
     text-decoration: none;
-=======
->>>>>>> fdb5502a353742327ae1761555269408dbe0f904
 }
 
 a {
@@ -59,6 +56,16 @@ h6 {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
+}
+
+
+#loader {
+      width: 100%;
+      height: 100%;
+      background-image: url(../img/loading.gif);
+      background-color: white;
+      background
+      margin: 0;
 }
 
 .img-centered {
@@ -377,7 +384,7 @@ section h3.section-subheading {
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
-    background: rgba(254,209,54,.9); /* Fallback when no plugin support */
+    background: rgba(0,153,255, 0.8);
     background: rgba({{ site.color.primary | hex_to_rgb | join: ',' }}, .9);
 }
 
