Updated services.html (Security)

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -36,7 +36,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Datensicherung</h4>
-                    <p class="text-muted">Die Daten werden gespeichert !!Work in progress!!</p>
+                    <p class="text-muted">Die Daten werden lokal auf dem Car-PC gespeichert. Es gibt die möglichkeit diese Daten mit dem Smartphone zu synchronisieren, um das Fahrerlebnis mit Freunden zu teilen</p>
                 </div>
             </div>
         </div>
