Included images of shooting + team page redesign

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>*MONAT* 2015</h4>
+                                    <h4>Juni 2015</h4>
                                     <h4 class="subheading">Der Anfang von allem</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Als </p>
                                 </div>
                             </div>
                         </li>
