--- a/_includes/team.html
+++ b/_includes/team.html
@@ -7,22 +7,43 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
-            <div class="row">
-                {% for member in site.people %}
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
+            <div class="row" style="margin-left: 50px;">
+                <div class="col-md-6">
+                    {% for member in site.people limit:3 %}
+                        <h4>{{ member.name }} <span class="text-muted" style="font-size:12px;">{{ member.position }}</span></h4> 
+                        <div class="row">
+                            <div class="col-md-12">
+                                <img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle pull-left" alt="" style="margin-right:10px; margin-bottom:15px;">
+                                <ul class="list-inline social-buttons">
+                                    {% for network in member.social %}
+                                    <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}" style="margin-left:12px;"></i></a></li>
+                                    {% endfor %}
+                                </ul>
+                                <hr>
+                                <span>{{ member.text }}</span>
+                            </div>
+                        </div style="border-bottom: 1px solid #ccc;">
+                    {% endfor %}
                 </div>
-                {% endfor %}
+
+                <div class="col-md-6 pull-right">
+                    {% for member in site.people offset:3 %}
+                        <h4>{{ member.name }} <span class="text-muted" style="font-size:12px;">{{ member.position }}</span></h4> 
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul class="list-inline social-buttons">
+                                    {% for network in member.social %}
+                                    <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}" style="margin-left:12px;"></i></a></li>
+                                    {% endfor %}
+                                </ul>
+                                <hr>
+                                <span>{{ member.text }}</span>
+                            </div>
+                            <img src="img/team/{{ member.pic }}.png" class="img-responsive img-circle pull-left" alt="" style="margin-right:10px; margin-bottom:15px;">
+                        </div style="border-bottom: 1px solid #ccc;">
+                    {% endfor %}
+                </div>
+                <hr>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
