--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
 
-    <body id="page-top" class="index">
+    <body id="page-top" class="landing-page landing-page1">
 
     <div id="loader"></div>
 
