Rephrased texts in content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,10 @@
                             <div class="description">
                                 <h2>Die BestShift App</h2>
                                 <br>
-                                <h5>Orbital fluidity grenade tower denim lights systemic boy. Fluidity denim gang 8-bit girl tattoo drone knife advert DIY modem neon face forwards. Hacker vinyl shanty town monofilament order-flow A.I. voodoo god motion denim BASE jump girl j-pop assault. Face forwards voodoo god geodesic bicycle into human denim industrial grade dome monofilament bridge crypto-rain shanty town jeans semiotics Legba. </h5>
+                                <h5>
+                                Als oberstes Ziel gilt mehr Informationen
+                                während- und nach der Fahrt zu bieten. Zusätzlich zu der App wir noch ein CarPC entwickelt der als Schnittstelle für das ODB-II Interface entwickelt. Die Hardware besteht aus einem Single Board Computer (SBC) welcher mittels Bluetooth Chip (ELM237) Daten aus dem Motormanagement sowie eigene Sensordaten erhält. 
+                                </h5>
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-fill btn-neutral">
