--- a/_includes/team.html
+++ b/_includes/team.html
@@ -48,7 +48,7 @@
             <hr>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Für nähere Information und generellen Kontakt, scheuen Sie nicht die Team-Mitglieder zu kontaktieren!</p>
                 </div>
             </div>
         </div>
