--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Über uns</h2>
-                    <h3 class="section-subheading text-muted">Unsere Geschicthe und unsere Zukunft</h3>
+                    <h3 class="section-subheading text-muted">Unsere Geschichte und unsere Zukunft</h3>
                 </div>
             </div>
             <div class="row">
@@ -20,7 +20,11 @@
                                     <h4 class="subheading">Der Anfang von allem</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Als </p>
+                                    <p class="text-muted">
+									Raphael Simsek hatte die Idee von einem Car-PC, der dem Fahrer Zeitpunkte zum effizienten Fahren vorschlägt.
+									Er wusste nicht genau ob die Umsetzung dieser Idee als Diplomprojekt angemessen wäre, und wendete sich an unseren Projektbetreuer
+									Erhard List. Nach einigen Änderungen war die Diplomarbeit Bestshift in jetziger Ausführung mit mehreren Features geboren.
+									</p>
                                 </div>
                             </div>
                         </li>
@@ -34,7 +38,10 @@
                                     <h4 class="subheading">Die Projektwoche</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+									Die Projektwoche dient in unserer Abteilung dazu, dass Team persönlich kennen zu lernen, team building zu betreiben und die allerersten Dokumente für das Projekt zu erstellen.
+									Alles in allem lief die Projektwoche ruhig ab und wir haben das Lastenheft direkt eingereicht um es vom Direktor des TGM und dem Schulministerium abnehmen zu lassen.
+									</p>
                                 </div>
                             </div>
                         </li>
@@ -48,21 +55,12 @@
                                     <h4 class="subheading">Publizierung der Website</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>???</h4>
-                                    <h4 class="subheading">???</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+									Die Website is Online!!<br />
+									Aber wem erzähle ich das? Ich nehme an Sie können es selbst sehen...
+									Die Website soll Interessierten die Möglichkeit bieten sich über unser Projekt zu Informieren und uns bei Fragen zu kontaktieren.
+									Bei Fragen an uns, benutzen Sie bitte das Formular am unteren Ende der Seite <a href = "#contactForm">contact us!</a>
+									</p>
                                 </div>
                             </div>
                         </li>
