--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,16 +51,13 @@
                             <div class="description">
                                 <h2>Die BestShift App</h2>
                                 <br>
-
                                 <h5>
-                                Als oberstes Ziel gilt mehr Informationen
-                                während- und nach der Fahrt zu bieten. Zusätzlich zu der App wir noch ein CarPC entwickelt der als Schnittstelle für das ODB-II Interface entwickelt. Die Hardware besteht aus einem Single Board Computer (SBC) welcher mittels Bluetooth Chip (ELM237) Daten aus dem Motormanagement sowie eigene Sensordaten erhält. 
+                                Das oberstes Ziel ist Informationen während- und nach der Fahrt zu bieten. Zusätzlich zur App wird ein Car-PC entwickelt der als Schnittstelle für das OBD-II Interface dient. Die Hardware umfasst einen Single Board Computer welcher mittels Bluetooth, Daten aus dem Motormanagement sowie eigene Sensordaten empfängt. 
                                 </h5>
-
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-fill btn-neutral">
-                                <i class="fa fa-android"></i> Play Store
+                                <i class="fa fa-android"></i>Play Store
                                 </button>
                                 <button class="btn btn-simple btn-neutral">
                                 <i class="fa fa-apple"></i>
@@ -72,7 +69,7 @@
                         </div>
                         <div class="col-md-5  hidden-xs">
                             <div class="parallax-image">
-                                <img class="phone" src="img/iphone.png"/>
+                                <img class="phone" src="img/nexus.png"/>
                             </div>
                         </div>
                     </div>
